clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00049.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00049.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = CirInt { ty: Named("s32i"), value: "10" } [external, default, align 4, dso_local]
global s : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("s32i"), value: "1" }, GlobalView { ty: Pointer { pointee: Named("s32i"), addr_space: None }, symbol: "x", indices: None }]) } [external, default, align 8, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %12 = get_global @s : rec_S*
                get_member
                %14 = load %13 : s32i, align 8
                %15 = const 1 : s32i
                cmp
                if %16 {
                        %17 = const 1 : s32i
                        store %17, %0
                        %18 = load %0 : s32i
                        return %18
                }
                yield
        }
        scope {
                %4 = get_global @s : rec_S*
                get_member
                %6 = load %5 : s32i*, align 8
                %7 = load %6 : s32i, align 4
                %8 = const 10 : s32i
                cmp
                if %9 {
                        %10 = const 2 : s32i
                        store %10, %0
                        %11 = load %0 : s32i
                        return %11
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
