clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00050.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00050.c" (c, x86_64-unknown-linux-gnu)
global v : rec_S2 = {1, 2, {3}, {4, 5}} [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %43 = get_global @v : rec_S2*
        %44 = get_member %43[0] "a" : s32i*
        %45 = load %44 : s32i, align 4
        %46 = const 1 : s32i
        %47 = cmp ne %45, %46 : bool
        if %47 {
            %48 = const 1 : s32i
            store %48, %0
            %49 = load %0 : s32i
            return %49
        }
        yield
    }
    scope {
        %36 = get_global @v : rec_S2*
        %37 = get_member %36[1] "b" : s32i*
        %38 = load %37 : s32i, align 4
        %39 = const 2 : s32i
        %40 = cmp ne %38, %39 : bool
        if %40 {
            %41 = const 2 : s32i
            store %41, %0
            %42 = load %0 : s32i
            return %42
        }
        yield
    }
    scope {
        %20 = get_global @v : rec_S2*
        %21 = get_member %20[2] "" : rec_anon2E0*
        %22 = get_member %21[0] "c" : s32i*
        %23 = load %22 : s32i, align 4
        %24 = const 3 : s32i
        %25 = cmp ne %23, %24 : bool
        %26 = ternary %25 ? { : bool
            %35 = const true : bool
            yield %35
        } : {
            %29 = get_global @v : rec_S2*
            %30 = get_member %29[2] "" : rec_anon2E0*
            %31 = get_member %30[1] "d" : s32i*
            %32 = load %31 : s32i, align 4
            %33 = const 3 : s32i
            %34 = cmp ne %32, %33 : bool
            yield %34
        }
        if %26 {
            %27 = const 3 : s32i
            store %27, %0
            %28 = load %0 : s32i
            return %28
        }
        yield
    }
    scope {
        %12 = get_global @v : rec_S2*
        %13 = get_member %12[3] "s" : rec_S1*
        %14 = get_member %13[0] "a" : s32i*
        %15 = load %14 : s32i, align 4
        %16 = const 4 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = const 4 : s32i
            store %18, %0
            %19 = load %0 : s32i
            return %19
        }
        yield
    }
    scope {
        %4 = get_global @v : rec_S2*
        %5 = get_member %4[3] "s" : rec_S1*
        %6 = get_member %5[1] "b" : s32i*
        %7 = load %6 : s32i, align 4
        %8 = const 5 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = const 5 : s32i
            store %10, %0
            %11 = load %0 : s32i
            return %11
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
