clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00053.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00053.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_T, "s1", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        get_member
        store %3, %4, align 4
        scope {
                %7 = alloca rec_T2E0, "s2", align 4
                %8 = const 1 : s32i
                get_member
                store %8, %9, align 4
                scope {
                        get_member
                        %11 = load %10 : s32i, align 4
                        get_member
                        %13 = load %12 : s32i, align 4
                        sub
                        %15 = const 0 : s32i
                        cmp
                        if %16 {
                                %17 = const 1 : s32i
                                store %17, %0
                                %18 = load %0 : s32i
                                return %18
                        }
                        yield
                }
                yield
        }
        %5 = const 0 : s32i
        store %5, %0
        %6 = load %0 : s32i
        return %6
}
