clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00056.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00056.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = "%d, %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = alloca s32i, "b", align 4
    %3 = alloca s32i, "c", align 4
    %4 = alloca s32i, "d", align 4
    %5 = const 0 : s32i
    store %5, %0
    %6 = const 42 : s32i
    store %6, %1, align 4
    %7 = get_global @printf : ((s8i*, ...) -> s32i)*
    %8 = get_global @.str : s8i[4]*
    %9 = cast(array_to_ptrdecay) %8 : s8i*
    %10 = load %1 : s32i, align 4
    %11 = call @printf(%9, %10) : s32i [all]
    %12 = const 64 : s32i
    store %12, %2, align 4
    %13 = get_global @printf : ((s8i*, ...) -> s32i)*
    %14 = get_global @.str : s8i[4]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = load %2 : s32i, align 4
    %17 = call @printf(%15, %16) : s32i [all]
    %18 = const 12 : s32i
    store %18, %3, align 4
    %19 = const 34 : s32i
    store %19, %4, align 4
    %20 = get_global @printf : ((s8i*, ...) -> s32i)*
    %21 = get_global @.str.1 : s8i[8]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    %23 = load %3 : s32i, align 4
    %24 = load %4 : s32i, align 4
    %25 = call @printf(%22, %23, %24) : s32i [all]
    %26 = const 0 : s32i
    store %26, %0
    %27 = load %0 : s32i
    return %27
}
