clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00057.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00057.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[16], "a", align 16
    %2 = alloca s8i[16], "b", align 16
    %3 = const 0 : s32i
    store %3, %0
    scope {
        %6 = const 16 : u64i
        %7 = const 16 : u64i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = const 1 : s32i
            store %9, %0
            %10 = load %0 : s32i
            return %10
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
