clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00059.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00059.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = const 97 : s32i
                %5 = const 97 : s32i
                cmp
                if %6 {
                        %7 = const 1 : s32i
                        store %7, %0
                        %8 = load %0 : s32i
                        return %8
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
